--- a/index.html
+++ b/index.html
@@ -4,9 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <!-- Styles -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <title>Game Site Prototype</title>
 </head>
 <body>
-    
+    <!-- Header start -->
+    <header class="header">
+        <div class="container">
+
+        </div>
+    </header>
+    <!-- Header end -->
+
+    <!-- Live streams start -->
+    <section class="live-streams">
+        <div class="container">
+
+        </div>
+    </section>
+    <!-- Live streams end -->
+
+    <!-- Featured games start -->
+    <section class="featured-games">
+        <div class="container">
+
+        </div>
+    </section>
+    <!-- Featured games end -->
+
+    <!-- Top events start -->
+    <section class="top-events">
+        <div class="container">
+
+        </div>
+    </section>
+    <!-- Top events end -->
+
+    <!-- Top free games start -->
+    <section class="top-free-games">
+        <div class="container">
+
+        </div>
+    </section>
+    <!-- Top free games end -->
+
+    <!-- Footer start -->
+    <footer class="footer">
+        <div class="container">
+
+        </div>
+    </footer>
+    <!-- Footer end -->
 </body>
 </html>
