--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     <!-- Top events start -->
     <section class="top-events">
         <div class="container">
+            <div class="top-events-box">
+                <p>Top Events</p>
+                <img src="./Rocket-League 1.png" alt="Rocket-League" loading="lazy">
+                
+            </div>
 
         </div>
     </section>
