--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     <!-- Featured games start -->
     <section class="featured-games">
         <div class="container">
-
+            <p class="featured-games">Featured games</p>
+            <div class="games-1"></div>
+            <div class="games-2"></div>
+            <div class="games-3"></div>
         </div>
     </section>
     <!-- Featured games end -->
