--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
     <!-- Footer start -->
     <footer class="footer">
         <div class="container">
+            <div class="footer-top">
+                <div>
+                    <p>NEWSLETTER</p>
+                    <p>Stay Upto Date</p>
+                </div>
 
+                <div>
+                    <input type="text" placeholder="Your Email...">
+                    <img src="" alt="">
+                </div>
+            </div>
         </div>
     </footer>
     <!-- Footer end -->
