--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
     <!-- Top free games start -->
     <section class="top-free-games">
         <div class="container">
-            
+            <div class="free_header">
+                <h3 class="free_header_title">Top Free Games</h3>
+                <img src="./images/to right.png" alt="to right" loading="lazy">
+            </div>
         </div>
     </section>
     <!-- Top free games end -->
