--- a/index.html
+++ b/index.html
@@ -19,7 +19,31 @@
         <!-- Header start -->
         <header class="header">
             <div class="container">
-        
+                <div class="navbar">
+                    <a href="#0">
+                        <img src="images/header-logo.png" alt="logo">
+                    </a>
+                    <ul>
+                        <a href="#0"><li>HOME</li></a>
+                        <a href="#0"><li>EVENT</li></a>
+                        <a href="#0"><li>BLOG</li></a>
+                        <a href="#0"><li>ABOUT</li></a>
+                    </ul>
+                    <div class="navbar-buttons">
+                        <a href="#0">
+                            <img src="images/explore-btn" alt="explore-btn">
+                        </a>
+                        <a href="#0">
+                            <img src="images/cart-btn" alt="cart-btn">
+                        </a>
+                        <a href="#0">
+                            <img src="images/create-btn" alt="create-btn">
+                        </a>
+                    </div>
+                    <div class="navbar-user-btn">
+                        <i class="fa-regular fa-user"></i>
+                    </div>
+                </div>
             </div>
         </header>
         <!-- Header end -->
