--- a/index.html
+++ b/index.html
@@ -54,6 +54,152 @@
                 <h3 class="free_header_title">Top Free Games</h3>
                 <img src="./images/to right.png" alt="to right" loading="lazy">
             </div>
+            <div class="free_mainbox">
+                <div class="free_smallbox">
+                    <div class="free_smallbox_left">
+                        <img src="./images/free-games_forza.png" alt="forza game" loading="lazy">
+                    </div>
+                    <div class="free_smallbox_right">
+                        <h3 class="free_smallbox_title">FORZA 5</h3>
+                        <p class="free_smallbox_text">Forza Horizon 5 is a 2021 racing video game developed by Playground Games.....<span class="free_span_for_font">More</span></p>
+                        <div class="free_starbox">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="free_smallbox">
+                    <div class="free_smallbox_left">
+                        <img src="./images/free-games_valo-rant.png" alt="valorant game" loading="lazy">
+                    </div>
+                    <div class="free_smallbox_right">
+                        <h3 class="free_smallbox_title">VALORANT</h3>
+                        <p class="free_smallbox_text">Valorant is a free-to-play first-person hero shooter developed and published by Riot .....<span class="free_span_for_font">More</span></p>
+                        <div class="free_starbox">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="free_smallbox">
+                    <div class="free_smallbox_left">
+                        <img src="./images/free-games_good-war.png" alt="good of war game" loading="lazy">
+                    </div>
+                    <div class="free_smallbox_right">
+                        <h3 class="free_smallbox_title">GOOD OF WAR</h3>
+                        <p class="free_smallbox_text">God of War is an action-adventure game franchise created by David Jaffe.....<span class="free_span_for_font">More</span></p>
+                        <div class="free_starbox">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="free_smallbox">
+                    <div class="free_smallbox_left">
+                        <img src="./images/free-games_red-dead.png" alt="RDR-2 game" loading="lazy">
+                    </div>
+                    <div class="free_smallbox_right">
+                        <h3 class="free_smallbox_title">RDR 2</h3>
+                        <p class="free_smallbox_text">Red Dead Redemption 2 is a 2018 action-adventure game developed and published.....<span class="free_span_for_font">More</span></p>
+                        <div class="free_starbox">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="free_smallbox">
+                    <div class="free_smallbox_left">
+                        <img src="./images/free-games_guild-wars.png" alt="guild wars game" loading="lazy">
+                    </div>
+                    <div class="free_smallbox_right">
+                        <h3 class="free_smallbox_title">GUILDWARS</h3>
+                        <p class="free_smallbox_text">Guild Wars is an online role-playing game series developed by ArenaNet and published.....<span class="free_span_for_font">More</span></p>
+                        <div class="free_starbox">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="free_smallbox">
+                    <div class="free_smallbox_left">
+                        <img src="./images/free-games_euro-track.png" alt="euro track game" loading="lazy">
+                    </div>
+                    <div class="free_smallbox_right">
+                        <h3 class="free_smallbox_title">EURO TRACK</h3>
+                        <p class="free_smallbox_text">Euro Truck Simulator 2 is an open world truck simulator game developed and published.....<span class="free_span_for_font">More</span></p>
+                        <div class="free_starbox">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="free_smallbox">
+                    <div class="free_smallbox_left">
+                        <img src="./images/free-games_rocket-league.png" alt="rocket league game" loading="lazy">
+                    </div>
+                    <div class="free_smallbox_right">
+                        <h3 class="free_smallbox_title">ROCKET LEAGUE</h3>
+                        <p class="free_smallbox_text">Rocket League is a high-powered hybrid of arcade-style soccer and and vehicular mayhem .....<span class="free_span_for_font">More</span></p>
+                        <div class="free_starbox">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="free_smallbox">
+                    <div class="free_smallbox_left">
+                        <img src="./images/free-games_cyber.png" alt="cyber game" loading="lazy">
+                    </div>
+                    <div class="free_smallbox_right">
+                        <h3 class="free_smallbox_title">CYBERPUNK 2077</h3>
+                        <p class="free_smallbox_text">Cyberpunk 2077 is an action role-playing video game developed by CD Projekt Red.....<span class="free_span_for_font">More</span></p>
+                        <div class="free_starbox">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="free_smallbox">
+                    <div class="free_smallbox_left">
+                        <img src="./images/free-games_GTA.png" alt="GTA the best" loading="lazy">
+                    </div>
+                    <div class="free_smallbox_right">
+                        <h3 class="free_smallbox_title">GTA V</h3>
+                        <p class="free_smallbox_text">Grand Theft Auto V is a 2013 action-adventure game developed by Rockstar.....<span class="free_span_for_font">More</span></p>
+                        <div class="free_starbox">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Top free games end -->
