FINISH: Section Top_free

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                     </div>
                     <div class="free_smallbox_right">
                         <h3 class="free_smallbox_title">FORZA 5</h3>
-                        <p class="free_smallbox_text">Forza Horizon 5 is a 2021 racing video game developed by Playground Games.....<span class="free_span_for_font">More</span></p>
+                        <p class="free_smallbox_text">Forza Horizon 5 is a 2021 racing video game developed by Playground Games.....<a href="#" class="free_link_for_font">More</a></p>
                         <div class="free_starbox">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
@@ -77,13 +77,13 @@
                     </div>
                     <div class="free_smallbox_right">
                         <h3 class="free_smallbox_title">VALORANT</h3>
-                        <p class="free_smallbox_text">Valorant is a free-to-play first-person hero shooter developed and published by Riot .....<span class="free_span_for_font">More</span></p>
+                        <p class="free_smallbox_text">Valorant is a free-to-play first-person hero shooter developed and published by Riot .....<a href="#" class="free_link_for_font">More</a></p>
                         <div class="free_starbox">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
@@ -93,13 +93,13 @@
                     </div>
                     <div class="free_smallbox_right">
                         <h3 class="free_smallbox_title">GOOD OF WAR</h3>
-                        <p class="free_smallbox_text">God of War is an action-adventure game franchise created by David Jaffe.....<span class="free_span_for_font">More</span></p>
+                        <p class="free_smallbox_text">God of War is an action-adventure game franchise created by David Jaffe.....<a href="#" class="free_link_for_font">More</a></p>
                         <div class="free_starbox">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
@@ -109,13 +109,13 @@
                     </div>
                     <div class="free_smallbox_right">
                         <h3 class="free_smallbox_title">RDR 2</h3>
-                        <p class="free_smallbox_text">Red Dead Redemption 2 is a 2018 action-adventure game developed and published.....<span class="free_span_for_font">More</span></p>
+                        <p class="free_smallbox_text">Red Dead Redemption 2 is a 2018 action-adventure game developed and published.....<a href="#" class="free_link_for_font">More</a></p>
                         <div class="free_starbox">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
@@ -125,13 +125,13 @@
                     </div>
                     <div class="free_smallbox_right">
                         <h3 class="free_smallbox_title">GUILDWARS</h3>
-                        <p class="free_smallbox_text">Guild Wars is an online role-playing game series developed by ArenaNet and published.....<span class="free_span_for_font">More</span></p>
+                        <p class="free_smallbox_text">Guild Wars is an online role-playing game series developed by ArenaNet and published.....<a href="#" class="free_link_for_font">More</a></p>
                         <div class="free_starbox">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
@@ -141,13 +141,13 @@
                     </div>
                     <div class="free_smallbox_right">
                         <h3 class="free_smallbox_title">EURO TRACK</h3>
-                        <p class="free_smallbox_text">Euro Truck Simulator 2 is an open world truck simulator game developed and published.....<span class="free_span_for_font">More</span></p>
+                        <p class="free_smallbox_text">Euro Truck Simulator 2 is an open world truck simulator game developed and published.....<a href="#" class="free_link_for_font">More</a></p>
                         <div class="free_starbox">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
@@ -157,13 +157,13 @@
                     </div>
                     <div class="free_smallbox_right">
                         <h3 class="free_smallbox_title">ROCKET LEAGUE</h3>
-                        <p class="free_smallbox_text">Rocket League is a high-powered hybrid of arcade-style soccer and and vehicular mayhem .....<span class="free_span_for_font">More</span></p>
+                        <p class="free_smallbox_text">Rocket League is a high-powered hybrid of arcade-style soccer and and vehicular mayhem .....<a href="#" class="free_link_for_font">More</a></p>
                         <div class="free_starbox">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
@@ -173,13 +173,13 @@
                     </div>
                     <div class="free_smallbox_right">
                         <h3 class="free_smallbox_title">CYBERPUNK 2077</h3>
-                        <p class="free_smallbox_text">Cyberpunk 2077 is an action role-playing video game developed by CD Projekt Red.....<span class="free_span_for_font">More</span></p>
+                        <p class="free_smallbox_text">Cyberpunk 2077 is an action role-playing video game developed by CD Projekt Red.....<a href="#" class="free_link_for_font">More</a></p>
                         <div class="free_starbox">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
@@ -189,13 +189,13 @@
                     </div>
                     <div class="free_smallbox_right">
                         <h3 class="free_smallbox_title">GTA V</h3>
-                        <p class="free_smallbox_text">Grand Theft Auto V is a 2013 action-adventure game developed by Rockstar.....<span class="free_span_for_font">More</span></p>
+                        <p class="free_smallbox_text">Grand Theft Auto V is a 2013 action-adventure game developed by Rockstar.....<a href="#" class="free_link_for_font">More</a></p>
                         <div class="free_starbox">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
-                            <img class="free_img" src="./images/free_star.png" alt="star logo" loading="lazy">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                 </div>
