featured games qisimi

--- a/index.html
+++ b/index.html
@@ -34,10 +34,48 @@
     <!-- Featured games start -->
     <section class="featured-games">
         <div class="container">
-            <p class="featured-games">Featured games</p>
-            <div class="games-1"></div>
-            <div class="games-2"></div>
-            <div class="games-3"></div>
+            <p class="featured-games-text">Featured games</p>
+            <div class="games">
+                <div class="games-1">
+                    <img src="./images/freatured-games-img-1.png" alt="games" loading="lazy">
+                    <div class="game-info-1">
+                        <p class="text-1">Red Dead Redemption 2</p>
+                        <p class="text-info-1">Loaded onto all of that contextual activity and conversation is the ability.....<span>More</span></p>
+                    </div>
+                    <br>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                </div>
+                <div class="games-2">
+                    <img src="./images/freatured-games-img-2.png" alt="games" loading="lazy">
+                    <div class="game-info-2">
+                        <p class="text-2">Blaze City</p>
+                        <p class="text-info-2">With rival group of thugs  started waging war on each other the city is now .....<span>More</span></p>
+                    </div>
+                    <br>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                </div>
+                <div class="games-3">
+                    <img src="./images/freatured-games-img-3.png" alt="games" loading="lazy">
+                    <div class="game-info-3">
+                        <p class="text-3">Elemental Spirits</p>
+                        <p class="text-info-3">11 year old Wix starts his first adventure . Follow him and see the world has....<span>More</span></p>
+                    </div>
+                    <br>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Featured games end -->
