--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- Styles -->
     <link rel="stylesheet" href="style/main.css">
     <!-- Font awesome -->
@@ -14,6 +15,7 @@
 
     <title>Game Site Prototype</title>
 </head>
+
 <body>
     <!-- Header start -->
     <header class="header">
@@ -43,11 +45,31 @@
     <section class="top-events">
         <div class="container">
             <div class="top-events-box">
-                <p>Top Events</p>
-                <img src="./Rocket-League 1.png" alt="Rocket-League" loading="lazy">
-                
+                <div class="events-box-left">
+                    <p>Top Events</p>
+                    <img src="./images/Rocket-League 1.png" alt="Rocket-League" loading="lazy">
+                </div>
+                <div class="events-box-right">
+                    <h1>ROCKET LEAGUE</h1>
+                    <p class="long-paragraf">The Rocket League Championship Series (RLCS) <br> 2021-22 season is here
+                        and bigger than ever.
+                        The
+                        <br> world's premier professional Rocket League <br> competition is back with $6,000,000 in
+                        prizing
+                        up for <br> grabs, an open circuit-based format, more regions, and <br> LANs making their
+                        return,
+                        the league is set to make <br> another leap forward
+                    </p>
+                    <a href="#1">Online</a>
+                    <img src="./images/Top-events-vector.svg" alt="Top-events-vector" loading="lazy">
+                    <a href="#1" class="link-right">Public</a> <br> <br> <br> <br> <br>
+                    <p class="span-1">$6,000,000</p>
+                    <p class="short-para-left"> in prizes</p>
+                    <p class="span-2">1201</p>
+                    <p class="short-para-right"> participants</p>
+                    <button>Register</button>
+                </div>
             </div>
-
         </div>
     </section>
     <!-- Top events end -->
@@ -68,4 +90,5 @@
     </footer>
     <!-- Footer end -->
 </body>
+
 </html>
