--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container">
                 <div class="navbar">
                     <a href="#0">
-                        <img src="images/header-logo.png" alt="logo">
+                        <img class="navbar-logo" src="images/header-logo.png" alt="logo">
                     </a>
                     <ul>
                         <a href="#0"><li>HOME</li></a>
@@ -31,17 +31,28 @@
                     </ul>
                     <div class="navbar-buttons">
                         <a href="#0">
-                            <img src="images/explore-btn" alt="explore-btn">
+                            Explore
+                            <i class="fa fa-compass"></i>
                         </a>
                         <a href="#0">
-                            <img src="images/cart-btn" alt="cart-btn">
+                            Cart
+                            <i><img class="navbar-cart-btn" src="images/navbar-cart-btn.svg" alt=""></i>
                         </a>
                         <a href="#0">
-                            <img src="images/create-btn" alt="create-btn">
+                            Create
+                            <i class="fa fa-plus"></i>
                         </a>
                     </div>
-                    <div class="navbar-user-btn">
+                    <a href="#0" class="navbar-user-btn">
                         <i class="fa-regular fa-user"></i>
+                    </a>
+                </div>
+                <div class="header-content">
+                    <div class="header-left-content">
+                        <h1>Create Your new<br><span>Legacy</span></h1>
+                    </div>
+                    <div class="header-right-content">
+
                     </div>
                 </div>
             </div>
