--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Game Site Prototype</title>
 </head>
 <body>
-    <div class="wrapper">
+    <main class="wrapper">
         <!-- Header start -->
         <header class="header">
             <div class="container">
@@ -49,10 +49,15 @@
                 </div>
                 <div class="header-content">
                     <div class="header-left-content">
-                        <h1>Create Your new<br><span>Legacy</span></h1>
+                        <h1><span class="text-c">C</span>reate Your new <span style="color: #D2A401;">Legacy</span></h1>
+                        <p>Play with over 10 million gamers in leagues, tournaments and ladders</p>
+                        <div class="header-buttons">
+                            <a href="#0">LOGIN</a>
+                            <a href="#0">SIGNUP</a>
+                        </div>
                     </div>
                     <div class="header-right-content">
-
+                        <img src="images/header-assassins.png" alt="assassin's image">
                     </div>
                 </div>
             </div>
@@ -98,6 +103,6 @@
             </div>
         </footer>
         <!-- Footer end -->
-    </div>
+    </main>
 </body>
 </html>
