Live stream section end

--- a/index.html
+++ b/index.html
@@ -26,8 +26,124 @@
         
         <!-- Live streams start -->
         <section class="live-streams">
-            <div class="container">
-        
+            <div class="live-stream-header">
+                <h1>Live Streams</h1>
+            </div>
+            <div class="live-stream-products">
+                <div class="live-stream-box">
+                    <div class="live-stream-box-image">
+                        <img src="images/stream1.svg" alt="Stream" loading="lazy">
+                        <div class="live-stream-image-live">
+                            Live
+                        </div>
+                    </div>
+                    <div class="live-stream-box-content">
+                        <h1>Elemental Spirits</h1>
+                        <p>The Elemental Spirit gameplay of Mr.X is live.</p>
+                        <div class="live-stream-box-stars">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="live-stream-box">
+                    <div class="live-stream-box-image">
+                        <img src="images/stream1.svg" alt="Stream" loading="lazy">
+                        <div class="live-stream-image-live">
+                            Live
+                        </div>
+                    </div>
+                    <div class="live-stream-box-content">
+                        <h1>Elemental Spirits</h1>
+                        <p>The Elemental Spirit gameplay of Mr.X is live.</p>
+                        <div class="live-stream-box-stars">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="live-stream-box">
+                    <div class="live-stream-box-image">
+                        <img src="images/stream1.svg" alt="Stream" loading="lazy">
+                        <div class="live-stream-image-live">
+                            Live
+                        </div>
+                    </div>
+                    <div class="live-stream-box-content">
+                        <h1>Elemental Spirits</h1>
+                        <p>The Elemental Spirit gameplay of Mr.X is live.</p>
+                        <div class="live-stream-box-stars">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="live-stream-box">
+                    <div class="live-stream-box-image">
+                        <img src="images/stream1.svg" alt="Stream" loading="lazy">
+                        <div class="live-stream-image-live">
+                            Live
+                        </div>
+                    </div>
+                    <div class="live-stream-box-content">
+                        <h1>Elemental Spirits</h1>
+                        <p>The Elemental Spirit gameplay of Mr.X is live.</p>
+                        <div class="live-stream-box-stars">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="live-stream-box">
+                    <div class="live-stream-box-image">
+                        <img src="images/stream1.svg" alt="Stream" loading="lazy">
+                        <div class="live-stream-image-live">
+                            Live
+                        </div>
+                    </div>
+                    <div class="live-stream-box-content">
+                        <h1>Elemental Spirits</h1>
+                        <p>The Elemental Spirit gameplay of Mr.X is live.</p>
+                        <div class="live-stream-box-stars">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="live-stream-box">
+                    <div class="live-stream-box-image">
+                        <img src="images/stream1.svg" alt="Stream" loading="lazy">
+                        <div class="live-stream-image-live">
+                            Live
+                        </div>
+                    </div>
+                    <div class="live-stream-box-content">
+                        <h1>Elemental Spirits</h1>
+                        <p>The Elemental Spirit gameplay of Mr.X is live.</p>
+                        <div class="live-stream-box-stars">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Live streams end -->
