--- a/index.html
+++ b/index.html
@@ -271,6 +271,62 @@
             </div>
         </section>
         <!-- Top events end -->
+
+        <!-- top-picks start -->
+        <section class="top-picks">
+            <div class="container">
+                <h1>Top Picks</h1>
+                <p>Here are the top picks of the month which gathered the largest number of attention from the users.</p>
+                <div class="top-picks-cards">
+                    <input type="radio" name="slider" id="slide-1" class="slider__radio">
+                    <input type="radio" name="slider" id="slide-2" class="slider__radio" checked>
+                    <input type="radio" name="slider" id="slide-3" class="slider__radio">
+        
+                    <div class="top-pikcs-cards-wrap slider__holder">
+                        <label for="slide-1" class="slider__item slider__item--1 picks-card">
+                            <div class="top-picks-card slider__item-content"
+                                style="background-image: url(./images/picks-img2.jpg);">
+                                <h2>Sword Warrior</h2>
+                                <h3>Sword Warrior is free action RPG game. In Sword Warrior, with your blade you will become <a
+                                        href="#0">...More</a></h3>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                            </div>
+                        </label>
+                        <label for="slide-2" class="slider__item slider__item--2 picks-card">
+                            <div class="top-picks-card slider__item-content"
+                                style="background-image: url(./images/picks-img1.jpg);">
+                                <h2>Sword Warrior</h2>
+                                <h3>Sword Warrior is free action RPG game. In Sword Warrior, with your blade you will become <a
+                                        href="#0">...More</a></h3>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                            </div>
+                        </label>
+                        <label for="slide-3" class="slider__item slider__item--3 picks-card">
+                            <div class="top-picks-card slider__item-content"
+                                style="background-image: url(./images/picks-img3.jpg);">
+                                <h2>Sword Warrior</h2>
+                                <h3>Sword Warrior is free action RPG game. In Sword Warrior, with your blade you will become <a
+                                        href="#0">...More</a></h3>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                            </div>
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- top-picks end -->
         
         <!-- Top free games start -->
         <section class="top-free-games">
